--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.3",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -22,9 +23,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-
-
-"browserslist": {
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
